# python-docx

./: .fdignore  .gitignore  .readthedocs.yaml  .rgignore  HISTORY.rst  MANIFEST.in  Makefile  README.md  pyproject.toml  renovate.json  test_table_anchored.docx  test_table_threaded.docx  test_table_threaded_resolved.docx  test_threaded.docx
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
docs/api/: document.rst
docs/user/: comments.rst  revisions.rst
features/: img-characterize-image.feature
src/docx/: __init__.py  api.py  blkcntnr.py  comments.py  document.py  revisions.py  table.py
src/docx/image/: __init__.py  tiff.py  webp.py
src/docx/opc/: constants.py  spec.py
src/docx/oxml/: __init__.py  comments.py  coreprops.py  document.py  ns.py  revisions.py  section.py  settings.py  shape.py  shared.py  simpletypes.py  styles.py  table.py
src/docx/oxml/text/: hyperlink.py  paragraph.py  parfmt.py  run.py
src/docx/parts/: comments.py  document.py
src/docx/templates/: default-comments.xml
src/docx/text/: paragraph.py  run.py
tests/: test_api.py  test_comment_convenience.py  test_comments.py  test_document.py  test_revisions.py  test_table.py
tests/image/: test_image.py  test_jpeg.py  test_tiff.py  test_webp.py
tests/opc/: test_coreprops.py
tests/oxml/: test_comments.py  test_revisions.py  test_table.py
tests/parts/: test_comments.py
tests/text/: test_paragraph.py  test_run.py
tests/unitutil/: cxml.py
