[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "python-docx"
authors = [{ name = "Steve Canny", email = "stcanny@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["lxml>=6.0.2", "typing_extensions>=4.15.0"]
description = "Create, read, and update Microsoft Word .docx files."
dynamic = ["version"]
keywords = ["docx", "office", "openxml", "word"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
docs = ["sphinx>=9.1"]
test = [
    "behave>=1.3.3",
    "pyparsing>=3.3.2",
    "pytest>=9.0.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.8.0",
]
lint = ["ruff>=0.11"]
typing = ["pyright>=1.1.408", "types-lxml-multi-subclass>=2026.2.16"]
publish = ["twine>=6.2.0"]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "publish" },
    { include-group = "test" },
    { include-group = "typing" },
]

[project.urls]
Changelog = "https://github.com/python-openxml/python-docx/blob/master/HISTORY.rst"
Documentation = "https://python-docx.readthedocs.org/en/latest/"
Homepage = "https://github.com/python-openxml/python-docx"
Repository = "https://github.com/python-openxml/python-docx"

[tool.pyright]
include = ["src/docx", "tests"]
pythonPlatform = "All"
pythonVersion = "3.13"
reportImportCycles = false
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
stubPath = "./typings"
typeCheckingMode = "strict"
verboseOutput = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
filterwarnings = [
    # -- exit on any warning not explicitly ignored here --
    "error",

    # -- pytest-xdist plugin may warn about `looponfailroots` deprecation --
    "ignore::DeprecationWarning:xdist",

    # -- pytest complains when pytest-xdist is not installed --
    "ignore:Unknown config option. looponfailroots:pytest.PytestConfigWarning",
]
looponfailroots = ["src", "tests"]
norecursedirs = [
    "doc",
    "docx",
    "*.egg-info",
    "features",
    ".git",
    "ref",
    "_scratch",
]
python_files = ["test_*.py"]
python_classes = ["Test", "Describe"]
python_functions = ["it_", "its_", "they_", "and_", "but_"]

[tool.ruff]
exclude = []
line-length = 100
target-version = "py313"

[tool.uv]
default-groups = ["dev"]

[tool.ruff.lint]
ignore = [
    "COM812", # -- over-aggressively insists on trailing commas where not desired --
    "PT001",  # -- wants @pytest.fixture() instead of @pytest.fixture --
]
select = [
    "C4",      # -- flake8-comprehensions --
    "COM",     # -- flake8-commas --
    "E",       # -- pycodestyle errors --
    "F",       # -- pyflakes --
    "I",       # -- isort (imports) --
    "PLR0402", # -- Name compared with itself like `foo == foo` --
    "PT",      # -- flake8-pytest-style --
    "SIM",     # -- flake8-simplify --
    "UP015",   # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",   # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",   # -- Use f-string instead of `.format()` call --
    "UP034",   # -- Avoid extraneous parentheses --
]

[tool.ruff.lint.isort]
known-first-party = ["docx"]
known-local-folder = ["helpers"]

[tool.setuptools.dynamic]
version = { attr = "docx.__version__" }
